<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F4F9"
    tools:context=".view.LoginActivity">

    <com.example.storyapp.CustomEmailForm
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:height="50dp"
        android:alpha="0"
        android:background="@drawable/input_form"
        android:fontFamily="@font/poppins"
        android:hint="@string/app_login_page_email_hint"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Login" />

    <com.example.storyapp.CustomPasswordForm
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:alpha="0"
        android:background="@drawable/input_form"
        android:fontFamily="@font/poppins"
        android:hint="@string/app_login_page_password_hint"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/poppins"
        android:text="@string/app_login_button"
        android:textColor="#000000"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:background="@drawable/ic_button_large"
        android:fontFamily="@font/poppins"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="166dp"
        android:layout_height="18dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/app_register_page_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/buttonTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:fontFamily="@font/poppins"
        android:shadowColor="#1D4ED8"
        android:text="here"
        android:textColor="#1D4ED8"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>